creating "engines" field in package.json

--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
     "@eslint/eslintrc": "^3",
     "eslint": "^9",
     "eslint-config-next": "15.4.6"
+  },
+  "engines": {
+    "node": "20.x"
   }
 }
